Fix Vercel deployment configuration with proper build settings

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
